# moostream

./: .gitmodules  AGENTS.md  CMakeLists.txt  README.md  install.sh  setup.sh
moostream/: .gitignore  .gitmodules  CMakeLists.txt  README.md  moostream  setup.sh  test_search.cpp
moostream/include/: image_utils.h
moostream/src/: AGENTS.md  main.cpp
moostream/src/audio/: AGENTS.md  mpv_player.cpp  mpv_player.h
moostream/src/core/: AGENTS.md  config.cpp  config.h  state_manager.h
moostream/src/ui/: AGENTS.md  application.cpp  application.h  player_view.cpp  search_view.cpp
moostream/src/utils/: image_utils.cpp
moostream/src/youtube/: AGENTS.md  extractor.cpp  extractor.h
moostream/test/: test_search.cpp  test_unicode.cpp
src/: AGENTS.md  main.cpp
src/audio/: mpv_player.cpp
src/core/: config.cpp  config.h  state_manager.cpp
src/ui/: application.cpp
src/utils/: AGENTS.md  image_utils.cpp  logger.cpp  logger.h
src/youtube/: extractor.cpp  extractor.h  http_client.cpp  http_client.h
youtube-tui/: .gitignore  CMakeLists.txt  README.md  setup.sh
youtube-tui/include/: player_interface.h  track.h
youtube-tui/src/: AGENTS.md
youtube-tui/src/audio/: AGENTS.md
youtube-tui/src/core/: AGENTS.md  config.cpp  state_manager.cpp  state_manager.h
youtube-tui/src/ui/: AGENTS.md  application.cpp  application.h  player_view.h  queue_view.cpp  queue_view.h  search_view.h
youtube-tui/src/utils/: AGENTS.md  logger.cpp
youtube-tui/src/youtube/: AGENTS.md  extractor.cpp
